# MiscarriageTwitterAnalysis

./: .gitignore  Clean_miscarriage.ipynb  README.md  authors_metrics.csv  miscarriage-analysis.ipynb  obtain_users.ipynb  pyproject.toml  requirements.txt  users_bot.ipynb
config_files/: config.yaml
dataCollection/: config.py  tweets_collection.py  twitter_search.py
mongo_utils/: mongo_utils.py
