[tool.poetry]
name = "miscarriagetwitteranalysis"
version = "0.1.0"
description = ""
authors = ["Oliph <olivier.philippe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
searchtweets-v2 = "^1.1.1"
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
