[tool.poetry]
name = "miscarriagetwitteranalysis"
version = "0.1.0"
description = ""
authors = ["Oliph <olivier.philippe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
searchtweets-v2 = "^1.1.1"
tenacity = "^8.1.0"
pymongo = "^4.2.0"
numpy = "^1.23.3"
python-lsp-black = "^1.2.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
