[tool.poetry]
name = "miscarriagetwitteranalysis"
version = "0.1.0"
description = ""
authors = ["Oliph <olivier.philippe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
gensim = "^4.2.0"
pandas = "^1.5.0"
nltk = "<3.5"
seaborn = "^0.12.0"
matplotlib = "^3.6.0"
ipykernel = "^6.16.0"
jupyterlab = "^3.4.7"
textblob = "^0.17.1"
wordcloud = "^1.8.2"
pyLDAvis = "^3.3.1"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"
missingno = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
